--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    
+    <main>
+        <div class="category">
+            <a href="#">NEW</a>
+            <a href="#">BEST</a>
+            <a href="#">CASE</a>
+            <a href="#">TOK</a>
+            <a href="#">KEYRING</a>
+            <a href="#">AIRPODS</a>
+            <a href="#">BUDS</a>
+            <a href="#">ACC</a>
+        </div>
+        <div class="container">
+            <div class="tab1">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"></a>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="./script/script.js"></script>
 </body>
 </html>
