--- a/index.html
+++ b/index.html
@@ -28,7 +28,103 @@
                     <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
                 </div>
                 <div class="thum">
-                    <a href="#"></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="tab2">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="tab3">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="tab4">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="tab5">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="tab6">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="tab7">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                </div>
+            </div>
+            <div class="tab8">
+                <div class="big">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                </div>
+                <div class="thum">
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
+                    <a href="#"><img src="" alt=""></a>
                 </div>
             </div>
         </div>
