--- a/index.html
+++ b/index.html
@@ -25,106 +25,42 @@
         <div class="container">
             <div class="tab1">
                 <div class="big">
-                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                    <span>255 보라구마<br><del>KRW 25,000</del><br>7,000</span></p>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
                 </div>
                 <div class="thum">
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/8342a141fee8f450d8cf958c02fd4df4" alt=""></a>
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/55761ae82b4cad76d8a2bcd380edd3bd" alt=""></a>
-                    <a href="#"><img src="./images/02725e76afedc00bcb27046d7cfee3c3" alt=""></a>
-                    <a href="#"><img src="./images/d3da39478faf148e16cd38a73ec2ef69" alt=""></a>
+                    <a href="#"><span>[AIR PODS] 226 벌룬파자마<br><del>KRW 20,000</del><br>KRW 7,000</span><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4.jpg" alt=""></a>
+                    <a href="#"><span>[AIR PODS] 248 곰글링<br><del>KRW 18,000</del><br>KRW 6,000</span><img src="./images/8342a141fee8f450d8cf958c02fd4df4.jpg" alt=""></a>
+                    <a href="#"><span>#S2 하트톡꽃받으숑<br><del>KRW 11,000</del><br>KRW 7,000</span><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4.jpg" alt=""></a>
+                    <a href="#"><span>KEY RING 228 새곰달곰<br><del>KRW 12,000</del><br>KRW 5,900</span><img src="./images/55761ae82b4cad76d8a2bcd380edd3bd.jpg" alt=""></a>
+                    <a href="#"><span>SMART TOK 선셋베어(크림)<br><del>KRW 13,000</del><br>KRW 6,000</span><img src="./images/02725e76afedc00bcb27046d7cfee3c3.jpg" alt=""></a>
+                    <a href="#"><span>서프곰 SET<br><del>KRW 18,000</del><br>KRW 14,000</span><img src="./images/d3da39478faf148e16cd38a73ec2ef69.jpg" alt=""></a>
                 </div>
             </div>
-            <div class="tab2">
+            <div class="tab2 tab">
                 <div class="big">
-                    <img src="./images/ba41c0bf2ec0fc09b0758c0d1e20e327" alt="">
+                    <!-- <img src="./images/ba41c0bf2ec0fc09b0758c0d1e20e327.jpg" alt=""> -->
                 </div>
                 <div class="thum">
-                    <a href="#"><img src="./images/ddcb13f1d412cb7380962cb958c5001f" alt=""></a>
-                    <a href="#"><img src="./images/e9fcc1db465f8b873e50da030ca4173b" alt=""></a>
-                    <a href="#"><img src="./images/e972242b905ec3f9c8f769954cbe044f" alt=""></a>
-                    <a href="#"><img src="./images/e9271454b957b70978116e1f42ca6e91" alt=""></a>
-                    <a href="#"><img src="./images/d1ad693b0171c276cdddbece30e6768e" alt=""></a>
-                    <a href="#"><img src="./images/d65321430c8e291c8e5982c7818e1dd2" alt=""></a>
+                    <a href="#"><img src="./images/ddcb13f1d412cb7380962cb958c5001f.jpg" alt=""></a>
+                    <a href="#"><img src="./images/e9fcc1db465f8b873e50da030ca4173b.jpg" alt=""></a>
+                    <a href="#"><img src="./images/e972242b905ec3f9c8f769954cbe044f.jpg" alt=""></a>
+                    <a href="#"><img src="./images/e9271454b957b70978116e1f42ca6e91.jpg" alt=""></a>
+                    <a href="#"><img src="./images/d1ad693b0171c276cdddbece30e6768e.jpg" alt=""></a>
+                    <a href="#"><img src="./images/d65321430c8e291c8e5982c7818e1dd2.jpg" alt=""></a>
                 </div>
             </div>
-            <div class="tab3">
+            <div class="tab3 tab">
                 <div class="big">
-                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
+                    <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt="">
                 </div>
                 <div class="thum">
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/8342a141fee8f450d8cf958c02fd4df4" alt=""></a>
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/55761ae82b4cad76d8a2bcd380edd3bd" alt=""></a>
-                    <a href="#"><img src="./images/02725e76afedc00bcb27046d7cfee3c3" alt=""></a>
-                    <a href="#"><img src="./images/d3da39478faf148e16cd38a73ec2ef69" alt=""></a>
-                </div>
-            </div>
-            <div class="tab4">
-                <div class="big">
-                    <img src="./images/ba41c0bf2ec0fc09b0758c0d1e20e327" alt="">
-                </div>
-                <div class="thum">
-                    <a href="#"><img src="./images/ddcb13f1d412cb7380962cb958c5001f" alt=""></a>
-                    <a href="#"><img src="./images/e9fcc1db465f8b873e50da030ca4173b" alt=""></a>
-                    <a href="#"><img src="./images/e972242b905ec3f9c8f769954cbe044f" alt=""></a>
-                    <a href="#"><img src="./images/e9271454b957b70978116e1f42ca6e91" alt=""></a>
-                    <a href="#"><img src="./images/d1ad693b0171c276cdddbece30e6768e" alt=""></a>
-                    <a href="#"><img src="./images/d65321430c8e291c8e5982c7818e1dd2" alt=""></a>
-                </div>
-            </div>
-            <div class="tab5">
-                <div class="big">
-                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
-                </div>
-                <div class="thum">
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/8342a141fee8f450d8cf958c02fd4df4" alt=""></a>
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/55761ae82b4cad76d8a2bcd380edd3bd" alt=""></a>
-                    <a href="#"><img src="./images/02725e76afedc00bcb27046d7cfee3c3" alt=""></a>
-                    <a href="#"><img src="./images/d3da39478faf148e16cd38a73ec2ef69" alt=""></a>
-                </div>
-            </div>
-            <div class="tab6">
-                <div class="big">
-                    <img src="./images/ba41c0bf2ec0fc09b0758c0d1e20e327" alt="">
-                </div>
-                <div class="thum">
-                    <a href="#"><img src="./images/ddcb13f1d412cb7380962cb958c5001f" alt=""></a>
-                    <a href="#"><img src="./images/e9fcc1db465f8b873e50da030ca4173b" alt=""></a>
-                    <a href="#"><img src="./images/e972242b905ec3f9c8f769954cbe044f" alt=""></a>
-                    <a href="#"><img src="./images/e9271454b957b70978116e1f42ca6e91" alt=""></a>
-                    <a href="#"><img src="./images/d1ad693b0171c276cdddbece30e6768e" alt=""></a>
-                    <a href="#"><img src="./images/d65321430c8e291c8e5982c7818e1dd2" alt=""></a>
-                </div>
-            </div>
-            <div class="tab7">
-                <div class="big">
-                    <img src="./images/925e00e115701f52726bd4c38edee62c" alt="">
-                </div>
-                <div class="thum">
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/8342a141fee8f450d8cf958c02fd4df4" alt=""></a>
-                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4" alt=""></a>
-                    <a href="#"><img src="./images/55761ae82b4cad76d8a2bcd380edd3bd" alt=""></a>
-                    <a href="#"><img src="./images/02725e76afedc00bcb27046d7cfee3c3" alt=""></a>
-                    <a href="#"><img src="./images/d3da39478faf148e16cd38a73ec2ef69" alt=""></a>
-                </div>
-            </div>
-            <div class="tab8">
-                <div class="big">
-                    <img src="./images/ba41c0bf2ec0fc09b0758c0d1e20e327" alt="">
-                </div>
-                <div class="thum">
-                    <a href="#"><img src="./images/ddcb13f1d412cb7380962cb958c5001f" alt=""></a>
-                    <a href="#"><img src="./images/e9fcc1db465f8b873e50da030ca4173b" alt=""></a>
-                    <a href="#"><img src="./images/e972242b905ec3f9c8f769954cbe044f" alt=""></a>
-                    <a href="#"><img src="./images/e9271454b957b70978116e1f42ca6e91" alt=""></a>
-                    <a href="#"><img src="./images/d1ad693b0171c276cdddbece30e6768e" alt=""></a>
-                    <a href="#"><img src="./images/d65321430c8e291c8e5982c7818e1dd2" alt=""></a>
+                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4.jpg" alt=""></a>
+                    <a href="#"><img src="./images/8342a141fee8f450d8cf958c02fd4df4.jpg" alt=""></a>
+                    <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4.jpg" alt=""></a>
+                    <a href="#"><img src="./images/55761ae82b4cad76d8a2bcd380edd3bd.jpg" alt=""></a>
+                    <a href="#"><img src="./images/02725e76afedc00bcb27046d7cfee3c3.jpg" alt=""></a>
+                    <a href="#"><img src="./images/d3da39478faf148e16cd38a73ec2ef69.jpg" alt=""></a>
                 </div>
             </div>
         </div>
